feat: fix extra space page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             </div>
         </div>
         <div class="col bg-mobil">
-            <img class="img-mobil"src="image/img_car.png" alt="">
+            <div class="image-mobil">
+                <img class="img-mobil"src="image/img_car.png" alt="">
+            </div>
         </div>
     </div>
 </body>
