--- a/index.html
+++ b/index.html
@@ -37,17 +37,38 @@
             </div>
         </nav>
     </div>
-    <div class="row container-banner">
+    <div class="row container-banner-all">
         <div class="col container-text">
             <div class="text-mobil">
-                <h1 style="font-weight: bold;margin-bottom:16px ;">Sewa & Rental Mobil Terbaik di <br> kawasan (Lokasimu)</h1>
-                <h6 style="font-size: 14px;font-weight: bolders;">Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas <br> terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu <br>untuk sewa mobil selama 24 jam.  </h6>
+                <h1 style="font-weight: bold;margin-bottom:16px;margin-top: 32px;">Sewa & Rental Mobil Terbaik di <br> kawasan Surabaya</h1>
+                <h6 style="font-size: 14px;font-weight: bolders;margin-bottom:16px ;">Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas <br> terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu <br>untuk sewa mobil selama 24 jam.  </h6>
                 <button class="sewa-button">Mulai Sewa Mobil</button>
             </div>
         </div>
         <div class="col bg-mobil">
             <div class="image-mobil">
-                <img class="img-mobil"src="image/img_car.png" alt="">
+                <img class  ="img-mobil"src="image/img_car.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="row container-promosi">
+        <div class="col image-promosi">
+            <img src="image/img_service.png" alt="">
+        </div>
+        <div class="col text-our-service">
+            <div class="container-our-service">
+                <h2 style="margin-bottom: 24px;">Best Car Rental for any kind of trip in Surabaya!</h2>
+                <h6>Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, 
+                    kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, 
+                    meeting, dll.
+                </h6>
+                <div class="top-services">
+                    <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Sewa Mobil Dengan Supir di Bali 12 Jam</h6>
+                    <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Sewa Mobil Lepas Kunci di Bali 24 Jam</h6>
+                    <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Sewa Mobil Jangka Panjang Bulanan</h6>
+                    <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Gratis Antar - Jemput Mobil di Bandara</h6>
+                    <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Layanan Airport Transfer / Drop in Out</h6>
+                </div>
             </div>
         </div>
     </div>
