fix(landing_page) : fix responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container-navbar">
-        <nav class="navbar navbar-expand-sm navbar-light">
+        <nav class="navbar navbar-expand-sm fixed-top navbar-light">
             <a class="navbar-brand navbar-judul" href="#">Rental Binar</a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -37,17 +37,19 @@
             </div>
         </nav>
     </div>
-    <div class="row container-banner-all">
-        <div class="col container-text">
-            <div class="text-mobil">
-                <h1 style="font-weight: bold;margin-bottom:16px;margin-top: 32px;">Sewa & Rental Mobil Terbaik di <br> kawasan Surabaya</h1>
-                <h6 style="font-size: 14px;font-weight: bolders;margin-bottom:16px ;">Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas <br> terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu <br>untuk sewa mobil selama 24 jam.  </h6>
-                <button class="sewa-button">Mulai Sewa Mobil</button>
+    <div class="container-banner-all">
+        <div class="row container-isi-banner">
+            <div class="col banner-page container-text">
+                <div class="text-mobil">
+                    <h1 style="font-weight: bold;margin-bottom:16px;margin-top: 32px;">Sewa & Rental Mobil Terbaik di <br> kawasan Surabaya</h1>
+                    <h6 style="font-size: 14px;font-weight: bolders;margin-bottom:16px ;">Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas <br> terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu <br>untuk sewa mobil selama 24 jam.  </h6>
+                    <button class="sewa-button">Mulai Sewa Mobil</button>
+                </div>
             </div>
-        </div>
-        <div class="col bg-mobil">
-            <div class="image-mobil">
-                <img class="img-mobil"src="image/img_car.png" alt="">
+            <div class="col banner-page bg-mobil">
+                <div class="image-mobil">
+                    <img class="img-mobil"src="image/img_car.png" alt="">
+                </div>
             </div>
         </div>
     </div>
@@ -69,6 +71,37 @@
                     <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Gratis Antar - Jemput Mobil di Bandara</h6>
                     <h6 style="margin-top: 16px;"><img src="image/img-check.png" alt="" style="margin-right: 16px;">Layanan Airport Transfer / Drop in Out</h6>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-whyus">
+        <div class="text-whyus">
+            <h1>Why Us?</h1>
+            <h6>Mengapa harus pilih Binar Car Rental ?</h6>
+        </div>
+        <div class="card-whyus">
+            <div class="container-card">
+                <div class="isi-card">
+                    <img src="image/icon_complete.png" alt="">
+                    <h5>Mobil Lengkap</h5>
+                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                </div>
+                <div class="isi-card">
+                    <img src="image/icon_complete.png" alt="">
+                    <h5>Mobil Lengkap</h5>
+                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                </div>
+                <div class="isi-card">
+                    <img src="image/icon_complete.png" alt="">
+                    <h5>Mobil Lengkap</h5>
+                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                </div>
+                <div class="isi-card">
+                    <img src="image/icon_complete.png" alt="">
+                    <h5>Mobil Lengkap</h5>
+                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                </div>
+                
             </div>
         </div>
     </div>
