--- a/index.html
+++ b/index.html
@@ -75,28 +75,28 @@
         </div>
     </div>
     <div class="container-whyus">
-        <div class="text-whyus">
-            <h1>Why Us?</h1>
-            <h6>Mengapa harus pilih Binar Car Rental ?</h6>
-        </div>
         <div class="card-whyus">
-            <div class="container-card">
-                <div class="isi-card">
+            <div class="row container-card">
+                <div class="text-whyus">
+                    <h1>Why Us?</h1>
+                    <h6>Mengapa harus pilih Binar Car Rental ?</h6>
+                </div>
+                <div class="col isi-card">
                     <img src="image/icon_complete.png" alt="">
                     <h5>Mobil Lengkap</h5>
                     <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
                 </div>
-                <div class="isi-card">
+                <div class="col isi-card">
                     <img src="image/icon_complete.png" alt="">
                     <h5>Mobil Lengkap</h5>
                     <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
                 </div>
-                <div class="isi-card">
+                <div class="col isi-card">
                     <img src="image/icon_complete.png" alt="">
                     <h5>Mobil Lengkap</h5>
                     <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
                 </div>
-                <div class="isi-card">
+                <div class="col isi-card">
                     <img src="image/icon_complete.png" alt="">
                     <h5>Mobil Lengkap</h5>
                     <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
