--- a/index.html
+++ b/index.html
@@ -76,30 +76,30 @@
     </div>
     <div class="container-whyus">
         <div class="card-whyus">
-            <div class="row container-card">
+            <div class="container-card">
                 <div class="text-whyus">
                     <h1>Why Us?</h1>
                     <h6>Mengapa harus pilih Binar Car Rental ?</h6>
                 </div>
-                <div class="col isi-card">
+                <div class="isi-card">
                     <img src="image/icon_complete.png" alt="">
                     <h5>Mobil Lengkap</h5>
                     <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
                 </div>
-                <div class="col isi-card">
-                    <img src="image/icon_complete.png" alt="">
-                    <h5>Mobil Lengkap</h5>
-                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                <div class="isi-card">
+                    <img src="image/icon_price.png" alt="">
+                    <h5>Harga Murah</h5>
+                    <h6>Harga murah dan bersaing, bisa bandingkan harga kami dengan rental mobil lain</h6>
                 </div>
-                <div class="col isi-card">
-                    <img src="image/icon_complete.png" alt="">
-                    <h5>Mobil Lengkap</h5>
-                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                <div class="isi-card">
+                    <img src="image/icon_24hrs.png" alt="">
+                    <h5>Layanan 24 Jam</h5>
+                    <h6>Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia di akhir minggu</h6>
                 </div>
-                <div class="col isi-card">
-                    <img src="image/icon_complete.png" alt="">
-                    <h5>Mobil Lengkap</h5>
-                    <h6>Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</h6>
+                <div class="isi-card">
+                    <img src="image/icon_professional.png" alt="">
+                    <h5>Sopir Profesi</h5>
+                    <h6>Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat waktu</h6>
                 </div>
                 
             </div>
